<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/navigation_bar"
        app:title="@string/crew"
        app:titleTextAppearance="@style/ToolbarTitleText"
        style="@style/toolbar_style" />

    <TextView
        android:id="@+id/title"
        android:text="@string/team_header"
        style="@style/team_header" />

    <TextView
        android:text="@string/team_mike"
        style="@style/team_member"
        android:layout_marginTop="@dimen/margin_24"/>
    <TextView
        android:text="@string/team_oleg"
        style="@style/team_member" />
    <TextView
        android:text="@string/team_tanya"
        style="@style/team_member"/>
    <TextView
        android:text="@string/team_olga"
        style="@style/team_member"/>

</LinearLayout>