<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.presentation.fragment.WorkPlace">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:contentInsetStartWithNavigation="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:navigationIconTint="?attr/colorSecondary"
        app:title="@string/district_fragment_title"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:titleTextColor="?attr/colorSecondary" />

    <EditText
        android:id="@+id/txt_search"
        style="@style/edit_text"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_for_edit_text_region"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/area_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_choose_all"
        app:layout_constraintTop_toBottomOf="@id/txt_search"
        tools:listitem="@layout/item_view_holder_area" />

    <TextView
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_choose_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_search" />

    <TextView
        android:id="@+id/btn_choose_all"
        style="@style/big_blue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/work_place_info_margin_start"
        android:layout_marginVertical="40dp"
        android:text="@string/btn_choose_title"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>